--- a/phnew/html/contact.html
+++ b/phnew/html/contact.html
@@ -98,7 +98,7 @@
     </div>
     <div class="right-column">
       <h1>Contact Us</h1>
-      <form>
+      <form action="../php/home.php" method="post">
         <label for="name">Name</label>
         <input type="text" id="name" name="name" required>
 
@@ -108,7 +108,7 @@
         <label for="message">Message</label>
         <textarea id="message" name="message" required></textarea>
 
-        <input type="submit" value="Submit">
+        <input type="submit" value="Submit" name="submit">
       </form>
     </div>
   </div>
