--- a/phnew/html/pwreset1.html
+++ b/phnew/html/pwreset1.html
@@ -38,10 +38,11 @@
         <form id="form-container" action="" method="post">
             <h2>Forgot Your Password?</h2>
 
-            <div class="input-field">
+           <!-- <div class="input-field">
                 <input type="text" name="userName" id="userName" placeholder="Enter Username..." required>
-            </div>
+            </div>-->
 
+            
             <div class="input-field">
                 <input type="text" name="Email" id="email" placeholder="Enter Email..." required>
             </div>
